--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
-  <title>Modern PWA - My Profile</title>
+  <title>Progresive Web App - Welcome to My Profile</title>
 </head>
 <body>
   <div class="container mt-5">
@@ -17,7 +17,7 @@
       </div>
       <div class="card-body">
         <img src="profile.jpg" alt="Profile Picture" class="rounded-circle img-thumbnail mb-3" width="150">
-        <h3>Nama Kamu</h3>
+        <h3>Agung Cessar Radika</h3>
         <p>Software Engineer | Gamer | Mahasiswa</p>
         <button class="btn btn-success mt-3" id="aboutBtn">
           <i class="fas fa-info-circle"></i> About Me
