--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1><i class="fas fa-user-circle"></i> My Profile</h1>
       </div>
       <div class="card-body">
-        <img src="profile.jpg" alt="Profile Picture" class="rounded-circle img-thumbnail mb-3" width="150">
+        <img src="profile.png" alt="Profile Picture" class="rounded-circle img-thumbnail mb-3" width="150">
         <h3>Agung Cessar Radika</h3>
         <p>Software Engineer | Gamer | Mahasiswa</p>
         <button class="btn btn-success mt-3" id="aboutBtn">
